<resources>
  <string name="app_name">MarahParking</string>
<string name="Email">Email</string>
<string name="Password">Password</string>
<string name="email">Email</string>
<string name="password">Password</string>
<string name="repass">Repass</string>
<string name="Name">Name</string>
<string name="logOut">Log out</string>
<string name="settings">Settings</string>
<string name="title_activity_maps1">Map</string>
<string name="Address1">Address</string>
<string name="Date">Date</string>
<string name="Address">Address</string>
    <string name="log_in">Log In</string>
    <string name="new_account">New Account</string>
    <string name="time">time</string>
    <string name="saveParking">saveParking</string>
    <string name="Address22">address2</string>
    <string name="vacant">vacant</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="with_pay">With Pay</string>
    <string name="refresh">Refresh</string>
    <string name="add_parking">Add Parking</string>

</resources>
